Adding RemoteRuleFallbackManager